# sr-build

./: .gitignore  README.md  client.project  shell.nix  sr-build.cabal
CabalCache/: CabalCache.hs  CabalCache2.hs  CabalCache3.hs
SeeReason/: Build.hs  Cabal.hs  CabalPlan.hs  IO.hs  ProgramVersion.hs  ProgramVersionIO.hs  Text.hs
